# tablign

./: .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  tests.yml
src/tablign/: __init__.py  cli.py  main.py
tablify/: __about__.py  __init__.py  main.py
tablign/: __about__.py  __init__.py  cli.py  main.py
test/: test_cli.py  test_tablify.py  test_tablign.py
tests/: test_cli.py  test_tablign.py
tools/: tablify
