[build-system]
requires = [
  "setuptools>=61"
]
build-backend = "setuptools.build_meta"

[project]
name = "tablign"
authors = [{name = "Nico Schlömer", email = "nico.schloemer@gmail.com"}]
description = "Align columns in ASCII tables"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Editors :: Text Processing",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Filters",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Utilities",
]
dynamic = ["version"]
requires-python = ">= 3.7"

[project.urls]
Homepage = "https://github.com/nschloe/tablign"
Issues = "https://github.com/nschloe/tablign/issues"

[tool.setuptools.dynamic]
version = {attr = "tablign.__about__.__version__"}

[project.scripts]
tablign = "tablign:cli.main"

[tool.ruff]
src = ["src", "tests"]
line-length = 88
select = ["ALL"]
ignore = [
  "ANN", "D", "INP001", "S101", "T201"
]
target-version = "py37"
