[metadata]
name = tablign
version = 0.3.2
author = Nico Schlömer
email = nico.schloemer@gmail.com
description = Align columns in ASCII tables
url = https://github.com/nschloe/tablign
project_urls =
    Code=https://github.com/nschloe/tablign
    Issues=https://github.com/nschloe/tablign/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Text Editors :: Text Processing
    Topic :: Text Processing
    Topic :: Text Processing :: Filters
    Topic :: Text Processing :: Markup
    Topic :: Text Processing :: Markup :: LaTeX
    Topic :: Utilities

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel

[options.entry_points]
console_scripts =
    tablign = tablign.cli:main
